force-app/main/default/objects/Project__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <formula>IF( NOT(ISBLANK(TotalCompletedMilestones__c)) &amp;&amp; NOT(ISBLANK(TotalMilestones__c)), TotalCompletedMilestones__c / TotalMilestones__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>