force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(TotalCompletedMilestones__c  == 0, &quot;Not Started&quot;,
IF(TotalCompletedMilestones__c == TotalMilestones__c, &quot;Complete&quot;, &quot;In Progress&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>