force-app/main/default/objects/Project__c/fields/TotalCompletedMilestones__c.field-meta.xml
<CustomField>
    <fullName>TotalCompletedMilestones__c</fullName>
    <label>Total Milestones completed</label>
    <summaryFilterItems>
        <field>Milestone__c.Completion__c</field>
        <operation>equals</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>