force-app/main/default/objects/Project__c/fields/TotalMilestones__c.field-meta.xml
<CustomField>
    <fullName>TotalMilestones__c</fullName>
    <label>Total Milestones</label>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>