force-app/main/default/objects/Project__c/validationRules/Required_project_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_project_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please fill in the project name.</errorMessage>
</ValidationRule>